<resources>
	<string name="app_name">LootinoMenu</string>
	<string name="string_restaurant">سفارش از منو رستوران</string>
	<string name="string_coffee_shop">سفارش از منو کافی شاپ</string>
	<string name="setting">setting</string>
	<string name="password">کلمه ی عبور</string>
	<string name="login_name">نام کاربری</string>

	<string name="enter_admin">ورود اعضا</string>
	<string name="enter_string">ورود</string>
	<string name="wrong_name_or_pass">نام کاربری یا پسورد اشتباه است</string>

	<!-- TODO: Remove or change this placeholder text -->
	<string name="hello_blank_fragment">Hello blank fragment</string>
	<string name="management_panel_string">پنل مدیریت</string>
	<string name="coffee_shop_sub_menu_list">محصولات کافی شاپ</string>
	<string name="restaurant_sub_menu_list">محصولات رستوران</string>
	<string name="test">sdc</string>
	<string name="menu">منو</string>
	<string name="back_to_menu">بازگشت به منو</string>
	<string name="defaul_name">چلوکباب نگینی</string>
	<string name="default_price">۲۳۰۰۰ تومان</string>
	<string name="defualt_detail">لورم ایپسوم متن ساختگی با تولید سادگی نامفهوم از صنعت چاپ و با استفاده از طراحان گرافیک است</string>
	<string name="todo">TODO</string>
	<string name="group_by">محصولات دسته بندی  </string>
	<string name="nothing_found">محصولی یافت نشد</string>
	<string name="price_of_product">قیمت محصول (تومان)</string>
	<string name="product_name">نام محصول</string>
	<string name="explain_for_product">توضیحات مربوط به محصول</string>
	<string name="do_delete">حذف کنید؟</string>
	<string name="from_menu">را از منوی</string>
	<string name="do_you_want">می خواهید</string>
</resources>
