<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:tools="http://schemas.android.com/tools">


	<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
		xmlns:app="http://schemas.android.com/apk/res-auto"
		android:layout_width="match_parent"
		android:layout_height="match_parent"
		android:background="@color/mine_shaft"
		tools:context=".login.LoginActivity"
		android:id="@+id/view_base_login_activity">

		<androidx.appcompat.widget.Toolbar
			android:id="@+id/my_toolbar"
			android:layout_width="match_parent"
			android:layout_height="56dp"
			android:background="?attr/colorPrimary"
			android:theme="@style/ThemeOverlay.AppCompat.ActionBar"
			app:contentInsetEnd="0dp"
			app:contentInsetLeft="0dp"
			app:contentInsetRight="0dp"
			app:contentInsetStart="0dp"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:popupTheme="@style/ThemeOverlay.AppCompat.Light">

			<androidx.constraintlayout.widget.ConstraintLayout
				android:layout_width="match_parent"
				android:layout_height="match_parent">

				<ImageButton
					android:id="@+id/img_btn_back_btn"
					style="@style/ButtonEmpty"
					android:layout_width="50dp"
					android:layout_height="match_parent"
					android:focusable="true"
					android:scaleType="center"
					android:src="@drawable/ic_action_enter"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintRight_toRightOf="parent"
					app:layout_constraintTop_toTopOf="parent"
					tools:ignore="ContentDescription" />

				<TextView
					style="@style/TestDefault"
					android:layout_width="wrap_content"
					android:layout_height="match_parent"
					android:drawablePadding="10dp"
					android:gravity="center"
					android:padding="5dp"
					android:text="@string/enter_string"
					android:textColor="@color/white"
					android:textSize="16sp"
					app:layout_constraintBottom_toBottomOf="parent"
					app:layout_constraintRight_toLeftOf="@id/img_btn_back_btn"
					app:layout_constraintTop_toTopOf="parent" />
			</androidx.constraintlayout.widget.ConstraintLayout>
		</androidx.appcompat.widget.Toolbar>

		<ImageView
			android:id="@+id/imageView"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="8dp"
			android:layout_marginBottom="100dp"
			app:layout_constraintBottom_toTopOf="@id/edit_text_name"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toTopOf="parent"
			app:layout_constraintVertical_bias="0.3"
			app:layout_constraintVertical_chainStyle="packed"
			app:srcCompat="@drawable/ic_login"
			tools:ignore="ContentDescription" />

		<androidx.appcompat.widget.AppCompatEditText

			android:id="@+id/edit_text_name"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:layout_marginStart="50dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="50dp"
			android:layout_marginBottom="50dp"
			android:drawableRight="@drawable/ic_account_box_white_24dp"
			android:drawablePadding="10dp"
			android:hint="@string/login_name"
			android:textColor="@color/white"
			android:textSize="16sp"
			android:theme="@style/editTextLogin"
			app:layout_constraintBottom_toTopOf="@+id/edit_text_pass"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/imageView"
			tools:ignore="Autofill,RtlHardcoded" />

		<androidx.appcompat.widget.AppCompatEditText
			android:id="@+id/edit_text_pass"
			android:layout_width="fill_parent"
			android:layout_height="50dp"
			android:layout_marginStart="50dp"
			android:layout_marginTop="8dp"
			android:layout_marginEnd="50dp"
			android:layout_marginBottom="8dp"
			android:drawableRight="@drawable/ic_vpn_key_white_24dp"
			android:drawablePadding="10dp"
			android:hint="@string/password"
			android:inputType="textVisiblePassword"

			android:textColor="@color/white"
			android:textSize="16sp"
			android:theme="@style/editTextLogin"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/edit_text_name"
			tools:ignore="Autofill,RtlHardcoded" />

		<com.google.android.material.button.MaterialButton
			android:id="@+id/btn_enter_admin"
			style="@style/ButtonOutline"
			android:layout_width="wrap_content"
			android:layout_height="wrap_content"
			android:layout_marginStart="8dp"
			android:layout_marginEnd="8dp"
			android:paddingLeft="50dp"
			android:paddingRight="50dp"
			android:text="@string/enter_admin"
			app:layout_constraintBottom_toBottomOf="parent"
			app:layout_constraintEnd_toEndOf="parent"
			app:layout_constraintStart_toStartOf="parent"
			app:layout_constraintTop_toBottomOf="@+id/edit_text_pass"
			app:strokeColor="@color/white"
			app:strokeWidth="2dp" />


	</androidx.constraintlayout.widget.ConstraintLayout>
</layout>